turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:14: error: type mismatch;
 found   : Int
 required: Char
		case 'R' => if(y==colors.length - 1){y=0}else{y+=1}
                                                               ^LangtonsAnt:15: error: type mismatch;
 found   : Char
 required: java.awt.Color
			setCouleurBrosse(colors(place(y,colors))); baisseBrosse(); leveBrosse(); droite();avance()
                                                      ^LangtonsAnt:16: error: type mismatch;
 found   : Int
 required: Char
		case 'L' => if(y==colors.length - 1){y=0}else{y+=1}
                                                               ^LangtonsAnt:17: error: type mismatch;
 found   : Char
 required: java.awt.Color
			setCouleurBrosse(colors(place(y,colors))); baisseBrosse(); leveBrosse(); gauche();avance()
                                                      ^